# autostub

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
autostub/: __init__.py  _cache.py  _generator.py  _request.py  _response.py  _schemas.py  plugin.py
autostub/adapters/: base.py  requests.py
src/autostub/: __init__.py  _generator.py  _schemas.py  generator.py
tests/: test_adapter.py  test_cache.py  test_requests_mock.py  test_schema.py
tests/data/: oapi_spec.yaml
